# youtube-analytics-project

./: pyproject.toml
homework-2/: moscowpython.json
homework-3/: main.py
src/: channel.py  playlist.py  video.py
